RESOLVED FIXED228229
[GStreamer][1.19] Warnings due to AppSinkCallbacks struct growth
https://bugs.webkit.org/show_bug.cgi?id=228229
Summary [GStreamer][1.19] Warnings due to AppSinkCallbacks struct growth
Philippe Normand
Reported 2021-07-23 03:16:56 PDT
../Source/WebCore/platform/audio/gstreamer/AudioSourceProviderGStreamer.cpp:316:9: warning: braces around scalar initializer [-Wbraced-scalar-init] { nullptr }, ^~~~~~~~~~~ 1 warning generated.
Attachments
Patch (3.52 KB, patch)
2021-07-23 03:18 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2021-07-23 03:18:35 PDT
EWS
Comment 2 2021-07-23 08:38:36 PDT
Committed r280243 (239911@main): <https://commits.webkit.org/239911@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434078 [details].
Radar WebKit Bug Importer
Comment 3 2021-07-23 08:39:15 PDT
Note You need to log in before you can comment on or make changes to this bug.