[GStreamer][1.19] Warnings due to AppSinkCallbacks struct growth https://bugs.webkit.org/show_bug.cgi?id=228229

Patch by Philippe Normand <pnormand@igalia.com> on 2021-07-23
Reviewed by Xabier Rodriguez-Calvar.

A new callback was added, for event notifications.

* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::AudioFileReader::handleNewDeinterleavePad):
* platform/audio/gstreamer/AudioSourceProviderGStreamer.cpp:
(WebCore::AudioSourceProviderGStreamer::handleNewDeinterleavePad):
* platform/graphics/gstreamer/ImageDecoderGStreamer.cpp:
(WebCore::ImageDecoderGStreamer::InnerDecoder::connectDecoderPad):

Canonical link: https://commits.webkit.org/239911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280243 268f45cc-cd09-0410-ab3c-d52691b4dbfc